<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="forecasts">Forecasts</string>
    <string name="getStart">Get Start</string>
    <string name="_19">19°</string>
    <string name="precipitations">Precipitations</string>
    <string name="max_24_min_18">Max: 24° Min:18°</string>
    <string name="today">Today</string>
    <string name="july_21">July,21</string>
    <string name="star_icon">star icon</string>
    <string name="sunrise">SUNRISE</string>
    <string name="_5_28_am">5:28 AM</string>
    <string name="sunset_7_25pm">Sunset: 7.25PM</string>
    <string name="map">Map</string>
    <string name="start_item">Default item for the start situation</string>
    <string name="city_list">City List</string>
    <string name="image_weather_situation">image to show weather situation</string>
    <string name="title_location">North America</string>
    <string name="_7_days_forecasts">7-Days Forecasts</string>
    <string name="left_icon">left icon</string>
    <string name="right_icon">right icon</string>
    <string name="days_forecasts">7-Days Forecasts</string>
</resources>