<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#F7CBFD"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/cardview_bg">

            <TextView
                android:id="@+id/textView_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:text="@string/sunrise"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/textView_sunrise_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:gravity="center"
                android:text="@string/_5_28_am"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView_sunset_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:text="@string/sunset_7_25pm"
                android:textColor="#BFDDDDDD"
                android:fontFamily="@font/open_sans_semi_bold"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>